--- a/main.tex
+++ b/main.tex
@@ -1,48 +1,8 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
-\title{Style}
+\title{}
 \input{name}
-\usepackage{lipsum}
 \input{style}
 \begin{document}
-
 \maketitle
-\section{Section}
-Fonts: cal = $\cal A$, scr = $\scr A$.
-\subsection{Subsection}
-\lipsum[1] 
-\begin{theorem}
-\lipsum[66]
-\begin{indeg}
-\lipsum[75]
-\end{indeg}
-\begin{indproof}
-\lipsum[2]
-\end{indproof}
-\end{theorem}
-\begin{proof}
-\lipsum[3]
-\begin{indlem}
-\lipsum[66]
-\end{indlem}
-\begin{indproof}
-\lipsum[4]
-\end{indproof}
-\lipsum[5]
-\end{proof}
-\lipsum[23]
-\begin{example} \lipsum[75]
-\begin{enumerate}
-    \item \lipsum[2]
-    \item \lipsum[3]
-    \begin{enmlem}
-    \lipsum[66] 
-    \end{enmlem}
-    \begin{enmproof}
-    \lipsum[24]
-    \end{enmproof}
-\end{enumerate}
-\end{example}
-
-
 \end{document}
