Updates from Overleaf

--- a/style.tex
+++ b/style.tex
@@ -72,6 +72,7 @@
 \DeclareMathOperator{\im}{Im}
 \DeclareMathOperator{\image}{im}
 \DeclareMathOperator{\ind}{ind}
+\DeclareMathOperator{\jac}{Jac}
 \let \ker \relax
 \DeclareMathOperator{\ker}{Ker}
 \DeclareMathOperator{\kernel}{ker}
